{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 23,
  "lineage": "528d746e-fcd6-bf27-6434-90cdb5b7fb4e",
  "resources": [
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e38de0fbcfa0bdb",
            "domain": "vpc",
            "id": "eipalloc-05e38de0fbcfa0bdb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-79-120-207.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.120.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-cluster-eip"
            },
            "tags_all": {
              "Name": "my-eks-cluster-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:internet-gateway/igw-0e20140a1bc5c7a7e",
            "id": "igw-0e20140a1bc5c7a7e",
            "owner_id": "803500143866",
            "tags": {
              "Name": "my-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "my-eks-cluster-igw"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e38de0fbcfa0bdb",
            "association_id": "eipassoc-0a1ca1f2134892cd8",
            "connectivity_type": "public",
            "id": "nat-04d77ffc9abe63533",
            "network_interface_id": "eni-0b5221f8e8abcaf3e",
            "private_ip": "10.0.1.251",
            "public_ip": "3.79.120.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036bd9de577cade4e",
            "tags": {
              "Name": "my-eks-cluster-ngw"
            },
            "tags_all": {
              "Name": "my-eks-cluster-ngw"
            }
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.eip",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:route-table/rtb-061448304e3cd7e00",
            "id": "rtb-061448304e3cd7e00",
            "owner_id": "803500143866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d77ffc9abe63533",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_eip.eip",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.ngw",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:route-table/rtb-0712b0a0289ffa206",
            "id": "rtb-0712b0a0289ffa206",
            "owner_id": "803500143866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e20140a1bc5c7a7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f544d965cfaa67d",
            "route_table_id": "rtb-061448304e3cd7e00",
            "subnet_id": "subnet-028fa3fe04376a3bd"
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.eip",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.ngw",
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039c51202e5cf865b",
            "route_table_id": "rtb-061448304e3cd7e00",
            "subnet_id": "subnet-0f33724b02b737a7c"
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.eip",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.ngw",
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b171173dbb0eba7",
            "route_table_id": "rtb-061448304e3cd7e00",
            "subnet_id": "subnet-02d59435c21fe6e40"
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.eip",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.ngw",
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b365ae50dde48e98",
            "route_table_id": "rtb-0712b0a0289ffa206",
            "subnet_id": "subnet-036bd9de577cade4e"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ce3b60ab7fad5d",
            "route_table_id": "rtb-0712b0a0289ffa206",
            "subnet_id": "subnet-03e4267065af7b875"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe27e6811d0b3cd0",
            "route_table_id": "rtb-0712b0a0289ffa206",
            "subnet_id": "subnet-086a61d46d70f310f"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfc31553750a3a4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": null,
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-028fa3fe04376a3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028fa3fe04376a3bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-0f33724b02b737a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f33724b02b737a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-02d59435c21fe6e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d59435c21fe6e40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-3",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-3",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-036bd9de577cade4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036bd9de577cade4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-1",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-1",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-03e4267065af7b875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e4267065af7b875",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-2",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-2",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:subnet/subnet-086a61d46d70f310f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086a61d46d70f310f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803500143866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-3",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-3",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes/cluster/my-eks-cluster": "owned"
            },
            "vpc_id": "vpc-0a6a1e4ed535c3132"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.eks_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:803500143866:vpc/vpc-0a6a1e4ed535c3132",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03550cfb84d5826c3",
            "default_route_table_id": "rtb-086574bdfd3e7876d",
            "default_security_group_id": "sg-08d43aafe14e9b72a",
            "dhcp_options_id": "dopt-c0958aab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6a1e4ed535c3132",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086574bdfd3e7876d",
            "owner_id": "803500143866",
            "tags": {
              "Name": "my-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "my-eks-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}